--- a/style.css
+++ b/style.css
@@ -790,8 +790,20 @@ body {
     webkit-tap-highlight-color: #fed136;
 }
 
+/* tailwind */
+
+ul {
+    padding-inline-start: 0;
+}
+li {
+    list-style: none;
+}
+
 .flex {
     display: flex;
+}
+.inline-box {
+    display: inline-box;
 }
 
 .items-center {
@@ -805,7 +817,41 @@ body {
 .gap-3 {
     gap: 12px;
 }
+.gap-4 {
+    gap: 16px;
+}
+.gap-5 {
+    gap: 20px;
+}
+.gap-6 {
+    gap: 24px;
+}
 
 .p-3 {
     padding: 12px;
+}
+
+.w-7 {
+    width: 28px;
+}
+.w-12 {
+    width: 48px;
+}
+.h-7 {
+    height: 28px;
+}
+.h-12 {
+    height: 48px;
+}
+
+.bg-gray-900 {
+    background-color: rgb(17 24 39);
+}
+
+.rounded-full {
+    border-radius: 9999px;
+}
+
+.text-white {
+    color: white;
 }
